synaptic (0.75.11) UNRELEASED; urgency=low

  [  Sergey Alyoshin ]
  * Fix some compiler warnings, closes: #672919
  * Fix missing Help/Contents localization, closes: #670961
  
  [ Michael Vogt ]
  * add "ctrl-l" accelerator key for downloading the changelog,
    closes: #388250
  * merge patch from Carsten Hey to support multiarch deborphan,
    closes: #670542

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 May 2012 12:56:06 +0200

synaptic (0.75.10) unstable; urgency=low

  * rebuild with multiarch support
  * debian/control:
    - remove X-Ubuntu-Use-Langpack again
    - update build-dependencies for libapt-pkg-dev

 -- Michael Vogt <mvo@debian.org>  Mon, 16 Apr 2012 21:17:14 +0200

synaptic (0.75.9) unstable; urgency=low

  * generate synaptic.pot during the package build to really enable
    langpack support

 -- Michael Vogt <mvo@debian.org>  Tue, 03 Apr 2012 09:45:48 +0200

synaptic (0.75.8) unstable; urgency=low

  * debian/control:
    - add X-Ubuntu-Use-Langpack to enable langpack support
  * debian/rules:
    - run dh_translations if available, this will enable langpack
      support
  * po/*.po, configure.in:
    - refresh translations from LP and update ALL_LINGUAS to match
      the new translations (LP: #889351)

 -- Michael Vogt <mvo@debian.org>  Mon, 02 Apr 2012 11:26:34 +0200

synaptic (0.75.7) unstable; urgency=low

  * common/rpackage.cc:
    - fix reading multiarch file list (LP: #960250)

 -- Michael Vogt <mvo@debian.org>  Tue, 27 Mar 2012 16:14:46 +0200

synaptic (0.75.6) unstable; urgency=low

  * fix segfault for packages without VerFile attribute, thanks to
    Hans-Georg Bork, closes: #663016

 -- Michael Vogt <mvo@debian.org>  Mon, 12 Mar 2012 22:08:32 +0100

synaptic (0.75.5) unstable; urgency=low

  * common/rpackagelister.cc:
    - simplify openCache() code to use more modern std::vector features
      and fix crash along the way (LP: #936677)
  * common/sections_trans.cc:
    - add "metapackages", "education", "introspection"