@@ -9,6 +9,8 @@ synaptic (0.75.11) UNRELEASED; urgency=low
     closes: #388250
   * merge patch from Carsten Hey to support multiarch deborphan,
     closes: #670542
+  * only try to apply distro specific patches if there are any,
+    thanks to  Moritz Muehlenhoff, closes: #626257
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 May 2012 12:56:06 +0200
 
